# bcdb

./: .dockerignore  .envrc  .flake8  .gitignore  .gitmodules  .isort.cfg  .jscpd.json  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Doxyfile  LICENSE.TXT  README.md  build.nix  default.nix  flake.nix  lsan.supp  memodb-notes  shell.nix
lib/BCDB/: BCDB.cpp  CMakeLists.txt  GuidedLinker.cpp  Merge.cpp  Merge.h  Mux.cpp  Mux2.cpp  Util.cpp  Util.h  mux_main.c
lib/MemoDB/: CAR.cpp  CID.cpp  CMakeLists.txt  Evaluator.cpp  Git.cpp  HTTP.cpp  LevelDB.cpp  MemoDB.cpp  Multibase.cpp  Node.cpp  RocksDB.cpp  SQLite.cpp  Scripting.cpp  Server.cpp  Store.cpp  Support.cpp  URI.cpp  memodb_internal.h  scripting_init.js
lib/bcdb/: BCDB.cpp  BitstreamReader.cpp  CMakeLists.txt  Context.cpp  ImitateBinary.cpp  Split.cpp  Util.cpp
lib/memodb/: CAR.cpp  CBOREncoder.cpp  CID.cpp  CMakeLists.txt  Client.cpp  Evaluator.cpp  Funcs.cpp  HTTP.cpp  JSONEncoder.cpp  Multibase.cpp  NNG.cpp  Node.cpp  NodeVisitor.cpp  Request.cpp  RocksDB.cpp  SQLite.cpp  Server.cpp  Store.cpp  ToolSupport.cpp  URI.cpp  memodb_internal.h
lib/outlining/: CMakeLists.txt  Candidates.cpp  Dependence.cpp  Extractor.cpp  FalseMemorySSA.cpp  Funcs.cpp  LinearProgram.cpp  OutliningPlugin.cpp  SizeModel.cpp
test/: CMakeLists.txt  gl-test.py  lit.cfg.py.in  outlining-test.py  shelltest.py
test/Align/: anon-functions.ll  compatibility-3.6.test  compatibility-3.7.test  compatibility-3.8.test  compatibility-3.9.test  compatibility-4.0.test  compatibility-5.0.test  compatibility-6.0.test  compatibility-7.0.test  compatibility-9.0.test  compatibility.ll  empty.ll  function-local-metadata.3.5.test  metadata-index.ll
test/BCDB/: CMakeLists.txt  alias.ll  anonymous-string.ll  cmd-cp.ll  cmd-head-get.ll  empty.ll  function.ll  identifier-nonascii.ll  init.test  insert-twice.ll  version0.ll  version1.ll  version2.ll
test/GuidedLinker/: CMakeLists.txt  alias-noweak.ll  alias-to-private.ll  alias-unsafe.ll  alias.ll  blockaddress.ll  constexpr-extern-complex.ll  constexpr-extern-struct.ll  crash-LoadRemainder-outdated-struct-types-2.ll  crash-LoadRemainder-outdated-struct-types.ll  crash-unused-internal.ll  exceptions.cpp  exported-once-and-directly-used.ll  exported-once-and-imported.ll  exported-twice-and-directly-used.ll  global-comdat.ll  global-ctor.ll  global-function-pointer-internal-crash.ll  global-function-pointer-internal-run.ll  global-function-pointer-internal.ll  global-linkonce_odr-nooverride.ll  global-linkonce_odr-noweak.ll  global-linkonce_odr-spurious.ll  global-linkonce_odr-unsafe.ll  global-linkonce_odr.ll  identical-recursive-functions.ll  inlined-infinite-recursion.ll  internal-function.ll  internal-global-uses-import.ll  internal-global.ll  internal-stays-in-stub.ll  internal-stays-in-wrapper.ll  lib.ll  main.ll  name_conflict.ll  personality.ll  pie-level.ll  plugin-scope.ll  plugin-with-global.ll  plugin-with-library-conflict.ll  (+2 more)
test/MemoDB/: CMakeLists.txt
test/Merge/: abi-attributes.ll  alias.ll  byval.ll  dedup.ll  function-takes-own-address.ll  identical-modules.ll  mutual-recursion.ll  recursion-with-struct.ll  renaming-conflicts.ll  simple.ll  vararg.ll
test/Mux/: CMakeLists.txt  global-common.ll  global-ctor.ll  global-dtor.ll  global-function-pointer-internal.ll  lib.ll  simple.ll  used.ll  vararg.ll  weak.ll
test/Mux2/: CMakeLists.txt  alias-spurious.ll  alias-to-private.ll  alias-unsafe.ll  alias.ll  blockaddress.ll  constexpr-extern-complex.ll  constexpr-extern-struct.ll  constexpr-extern.ll  copy-extern-global-to-intern.ll  crash-LoadRemainder-outdated-struct-types-2.ll  crash-LoadRemainder-outdated-struct-types.ll  crash-unused-internal.ll  exported-once-and-directly-used.ll  exported-once-and-imported.ll  exported-twice-and-directly-used.ll  global-comdat.ll  global-constant-uses-local-constant.ll  global-ctor.ll  global-function-pointer-internal-crash.ll  global-function-pointer-internal-run.ll  global-function-pointer-internal.ll  global-linkonce_odr-nodefs.ll  global-linkonce_odr-spurious.ll  global-linkonce_odr-unsafe.ll  global-linkonce_odr.ll  identical-recursive-functions.ll  internal-function-called.ll  internal-function.ll  internal-global-uses-import.ll  internal-global.ll  internal-stays-in-stub.ll  lib.ll  library-conflict.ll  main.ll  name_conflict.ll  pie-level.ll  plugin-with-global.ll  plugin-with-library-conflict.ll  recursive-unnamed-function.ll  (+2 more)
test/Outlining/: 2021-07-19-invalid-candidate.ll  CMakeLists.txt  branch-targets-merged.ll  bug14859-iv-cleanup-lpad.ll  collatz.ll  control-deps.ll  dead-blocks.ll  empty.ll  implicit-control-deps.ll  infinite-loop.ll  invoke.ll  loop.ll  phi-without-data-dependence.ll  ret-multi.ll  ret-void.ll  seh-catchpad.ll  size-model-aarch64.ll  size-model-armv4t.ll  size-model-riscv32.ll  size-model-wasm32.ll  size-model-x86_64.ll  swift-error.ll  volatile.ll  wineh-coreclr.ll
test/Split/: CMakeLists.txt  alias.ll  alignment.ll  attributes.ll  blockaddress.ll  cc.ll  comdat.ll  debug.ll  dll_storage_class.ll  dso_local.ll  function.ll  gc.ll  ifunc.ll  linkage.ll  module.ll  personality.ll  prefix-prologue.ll  recursive.ll  section.ll  struct-alloca.ll  struct-array-recursion.ll  struct-asm.ll  struct-byval-llvm9.ll  struct-byval.ll  struct-gep.ll  struct-global.ll  struct-linking.ll  struct-metadata.ll  struct-opaque-already.ll  struct-prefix.ll  struct-sret.ll  struct-unnamed.ll  struct.ll  unnamed_addr.ll  visibility.ll
test/Unit/: lit.cfg.py.in
test/WholeProgram/: CMakeLists.txt  extract-library.test
test/bcdb/: CMakeLists.txt
test/guided_linking/: CMakeLists.txt
test/outlining/: 2008-06-05-APInt-OverAShr.ll  2021-07-19-invalid-candidate.ll  bug14859-iv-cleanup-lpad.ll  cleanupret.ll  collatz.ll  control-deps.ll  dead-blocks-size-model.ll  dead-blocks.ll  empty.ll  implicit-control-deps.ll  infinite-loop.ll  invoke.ll  loop.ll  phi-from-unreachable.ll  phi-without-data-dependence.ll  printargv.ll  seh-catchpad.ll  size-model-aarch64.ll  size-model-armv4t.ll  size-model-riscv32.ll  swift-error.ll  (+11 more)
unittests/: CMakeLists.txt
(+626 files in other folders)
